--- a/css/contact.css
+++ b/css/contact.css
@@ -23,11 +23,12 @@
  .content p{
    text-align: center;
  }
- .button{
-   height: 3rem;
+.button{
+   font-size: 3rem;
    padding: 10px 10px;
    background-color: #008B8B;
    color: white;
+   border-style: none;
  }
  .button:hover {
    opacity: 0.7;
