--- a/css/contact.css
+++ b/css/contact.css
@@ -25,7 +25,7 @@
  }
 .button{
    font-size: 3rem;
-   padding: 10px 10px;
+   margin: 10px 10px;
    background-color: #008B8B;
    color: white;
    border-style: none;
